# KristinRaceDirector

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
race_director/: __init__.py  __main__.py  display.py
race_director/battle_engine/: __init__.py  dimensions.py  scorer.py
race_director/config/: __init__.py  schema.py
race_director/data_provider/: __init__.py  openf1_auth.py  openf1_rest.py  state_manager.py  test_recorder.py
race_director/models/: driver.py  scoring.py  session.py
race_director/multiviewer_adapter/: __init__.py  dry_run.py  mvf1_adapter.py
race_director/orchestrator/: __init__.py  hysteresis.py  loop.py
scripts/: capture_data.py  test_auth.py
